[Video Capture] Fix mac camera startup error messages not reaching log

The invocation of method VideoCaptureDeviceAVFoundation::setCaptureDevice(), 
see [1], has a design issue. The method returns a boolean flag indicating 
success vs. failure and the invoker aborts the capture session with an generic 
error message on failure. However, the method invocation itself also tries to 
(asynchronously) abort the capture session with a more detailed error message. 
Because it is sent asynchronously, the more detailed error message arrives only 
after the session has already been aborted and is discarded.

The proposed fix is to have the method produce the more detailed error string 
synchronously as an output parameter.


BUG=728860
TEST=
  content_browsertests --gtest_filter="VideoCaptureBrowserTest.*"

[1] https://cs.chromium.org/chromium/src/media/capture/video/mac/video_capture_device_mac.mm?q=video_capture_device_mac.mm&dr&l=324