media/capture/video/mac/video_capture_device_avfoundation_mac.mm
@@ -16,6 +16,7 @@
 #include "base/mac/mac_util.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/strings/string_util.h"
+#include "base/strings/sys_string_conversions.h"
 #include "media/base/timestamp_constants.h"
 #include "media/capture/video/mac/video_capture_device_mac.h"
 #include "media/capture/video_capture_types.h"
@@ -218,7 +219,8 @@ void ExtractBaseAddressAndLength(char** base_address,
   frameReceiver_ = frameReceiver;
 }
 
-- (BOOL)setCaptureDevice:(NSString*)deviceId {
+- (BOOL)setCaptureDevice:(NSString*)deviceId
+       outputErrorString:(std::string*)outputErrorString {
   DCHECK(captureSession_);
   DCHECK(main_thread_checker_.CalledOnValidThread());
 
@@ -240,9 +242,7 @@ void ExtractBaseAddressAndLength(char** base_address,
   // Look for input device with requested name.
   captureDevice_ = [AVCaptureDevice deviceWithUniqueID:deviceId];
   if (!captureDevice_) {
-    [self
-        sendErrorString:[NSString stringWithUTF8String:
-                                      "Could not open video capture device."]];
+    *outputErrorString = "Could not open video capture device.";
     return NO;
   }
 
@@ -252,11 +252,10 @@ void ExtractBaseAddressAndLength(char** base_address,
       [AVCaptureDeviceInput deviceInputWithDevice:captureDevice_ error:&error];
   if (!captureDeviceInput_) {
     captureDevice_ = nil;
-    [self sendErrorString:
-              [NSString stringWithFormat:
-                            @"Could not create video capture input (%@): %@",
-                            [error localizedDescription],
-                            [error localizedFailureReason]]];
+    *outputErrorString = base::SysNSStringToUTF8([NSString
+        stringWithFormat:@"Could not create video capture input (%@): %@",
+                         [error localizedDescription],
+                         [error localizedFailureReason]]);
     return NO;
   }
   [captureSession_ addInput:captureDeviceInput_];
@@ -272,8 +271,7 @@ void ExtractBaseAddressAndLength(char** base_address,
   captureVideoDataOutput_.reset([[AVCaptureVideoDataOutput alloc] init]);
   if (!captureVideoDataOutput_) {
     [captureSession_ removeInput:captureDeviceInput_];
-    [self sendErrorString:[NSString stringWithUTF8String:
-                                        "Could not create video data output."]];
+    *outputErrorString = "Could not create video data output.";
     return NO;
   }
   [captureVideoDataOutput_ setAlwaysDiscardsLateVideoFrames:true];
